force-app/main/default/objects/Change_Action_Rule__mdt/Change_Action_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Change Action Rule</label>
    <pluralLabel>Change Action Rules</pluralLabel>
</CustomObject>