force-app/main/default/objects/Change_Action_Rule__mdt/fields/Component_Name_Group__c.field-meta.xml
<CustomField>
    <fullName>Component_Name_Group__c</fullName>
    <label>Component Name Group</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>