force-app/main/default/objects/Change_Action_Rule__mdt/fields/Critical_Security_Threat__c.field-meta.xml
<CustomField>
    <fullName>Critical_Security_Threat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Security Threat</label>
    <type>Checkbox</type>
</CustomField>