force-app/main/default/objects/Change_Action_Rule__mdt/fields/Friendly_Template__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Template__c</fullName>
    <label>Friendly Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>