force-app/main/default/objects/Change_Action_Rule__mdt/fields/Ignore__c.field-meta.xml
<CustomField>
    <fullName>Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore</label>
    <type>Checkbox</type>
</CustomField>