force-app/main/default/objects/Change_Action_Rule__mdt/fields/Ignore_When_No_Change__c.field-meta.xml
<CustomField>
    <fullName>Ignore_When_No_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore When No Change</label>
    <type>Checkbox</type>
</CustomField>