force-app/main/default/objects/Change_Action_Rule__mdt/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>