force-app/main/default/objects/Change_Action_Rule__mdt/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>