force-app/main/default/objects/Change_Action_Rule__mdt/fields/Narrative_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Strategy__c</fullName>
    <label>Narrative Strategy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>