force-app/main/default/objects/Change_Action_Rule__mdt/fields/Parent_Name_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name_Group__c</fullName>
    <label>Parent Name Group</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>