force-app/main/default/objects/Change_Action_Rule__mdt/fields/Primary_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Area__c</fullName>
    <label>Primary Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>