force-app/main/default/objects/Change_Action_Rule__mdt/fields/Redact_Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>Redact_Sensitive_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redact Sensitive Data</label>
    <type>Checkbox</type>
</CustomField>