force-app/main/default/objects/Change_Action_Rule__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Setup Audit Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>