force-app/main/default/objects/Change_Action_Rule__mdt/fields/Target_Regex__c.field-meta.xml
<CustomField>
    <fullName>Target_Regex__c</fullName>
    <label>Target Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>