force-app/main/default/objects/Change_Action_Rule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Action__c</columns>
    <columns>Section__c</columns>
    <columns>Match_Type__c</columns>
    <columns>Primary_Area__c</columns>
    <columns>Severity__c</columns>
    <columns>Metadata_Type__c</columns>
    <columns>Change_Operation__c</columns>
    <columns>Priority__c</columns>
    <columns>Active__c</columns>
    <columns>Critical_Security_Threat__c</columns>
    <columns>Ignore__c</columns>
    <columns>Review_Required__c</columns>
    <columns>Redact_Sensitive_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>